add basis and gm conversion

--- a/qlat/qlat/c.py.in
+++ b/qlat/qlat/c.py.in
@@ -223,6 +223,8 @@ __all__ += [
         'set_gm_force_dual',
         'project_gauge_transform',
         'dot_gauge_momentum',
+        'set_anti_hermitian_matrix_from_basis',
+        'set_basis_from_anti_hermitian_matrix',
         'metropolis_accept',
         'gm_evolve_fg_pure_gauge',
         'run_hmc_evolve_pure_gauge',
