--- a/.github/workflows/qlat.yml
+++ b/.github/workflows/qlat.yml
@@ -89,7 +89,7 @@ jobs:
         sudo apt-get install -y python3-full python3-dev
         sudo apt-get install -y libopenmpi-dev ninja-build patchelf libeigen3-dev libgsl-dev zlib1g-dev libssl-dev libmpfr-dev
         sudo apt-get install -y libfftw3-dev
-        # sudo apt-get install -y gnuplot texlive-metapost poppler-utils
+        # sudo apt-get install -y gnuplot poppler-utils
         #
         sudo apt-get install -y latexmk texlive-latex-recommended texlive-latex-extra tex-gyre
     - name: Build default
@@ -154,7 +154,7 @@ jobs:
         sudo apt-get install -y libopenmpi-dev ninja-build patchelf libeigen3-dev libgsl-dev zlib1g-dev libssl-dev libmpfr-dev
         sudo apt-get install -y libfftw3-dev
         sudo apt-get install -y clang libomp-dev
-        # sudo apt-get install -y gnuplot texlive-metapost poppler-utils
+        # sudo apt-get install -y gnuplot poppler-utils
     - name: Download dependencies
       run: |
         ./scripts/download-core.sh
@@ -260,7 +260,7 @@ jobs:
         sudo apt-get install -y python3-full python3-dev
         sudo apt-get install -y libopenmpi-dev ninja-build patchelf libeigen3-dev libgsl-dev zlib1g-dev libssl-dev libmpfr-dev
         sudo apt-get install -y libfftw3-dev
-        # sudo apt-get install -y gnuplot texlive-metapost poppler-utils
+        # sudo apt-get install -y gnuplot poppler-utils
     - name: Download dependencies
       run: |
         ./scripts/download-core.sh
